# worksentry

./: .gitignore  architecture.md  check_app.ps1  check_app2.ps1  create_icon.ps1  create_icon2.ps1  index.html  package-lock.json  package.json  run_app.bat  run_app.ps1  run_check.bat  run_worksentry.bat  scoring_mechanism.md  simple_test.bat  test_webview.bat  test_webview.ps1  vite.config.ts  vitest.config.ts
.agent/workflows/: browser-integration.md  index-improvements.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  index.rs  mod.rs  search.rs
src-tauri/src/services/: browser_extractor.rs  file_watcher.rs  hotkey_manager.rs  mod.rs  tantivy_engine.rs
src-tauri/src/utils/: mod.rs  path_utils.rs
src/components/: Help.tsx  ResultsList.tsx  SearchBar.tsx  Settings.tsx
tests/backend/: lib.rs
tests/frontend/: App.test.tsx  ResultsList.test.tsx  SearchBar.test.tsx
