[package]
name = "worksentry"
version = "0.1.0"
description = "Unified workstation entry point with full-text search"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.22"
walkdir = "2"
notify = { version = "6" }
once_cell = "1"
dirs = "5"
jieba-rs = "0.6"
rusqlite = { version = "0.30", features = ["bundled"] } # For reading browser history


[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
